fix build enterpriselinux

--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -36,19 +36,15 @@ jobs:
           - image: "alpine"
             tag: "latest"
           - image: "debian"
-            tag: "latest"
-          - image: "debian"
             tag: "bookworm"
-          - image: "enterpriselinux"
-            tag: "latest"
           - image: "fedora"
             tag: "34"
           - image: "fedora"
             tag: "latest"
           - image: "fedora"
             tag: "rawhide"
-          - image: "opensuse"
-            tag: "latest"
+          # - image: "opensuse"  # TODO Test Opensuse
+          #   tag: "latest"
           - image: "ubuntu"
             tag: "latest"
           - image: "ubuntu"
