--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,8 +11,6 @@ variables:
 molecule:
   script:
     - image=${image} tag=${tag} molecule test
-  rules:
-    - if: $CI_COMMIT_REF_NAME == "main"
   retry: 1
   parallel:
     matrix:
@@ -28,9 +26,7 @@ molecule:
         tag: "34"
       - image: "fedora-systemd"
         tag: "latest"
-      - image: "fedora-systemd"
-        tag: "rawhide"
-      - image: "opensuse"
+      - image: "docker-opensuse-systemd"
         tag: "latest"
       - image: "docker-ubuntu-systemd"
         tag: "latest"
@@ -59,40 +55,7 @@ testing:
         tag: "34"
       - image: "fedora-systemd"
         tag: "latest"
-      - image: "fedora-systemd"
-        tag: "rawhide"
-      - image: "opensuse"
-        tag: "latest"
-      - image: "docker-ubuntu-systemd"
-        tag: "latest"
-      - image: "docker-ubuntu-systemd"
-        tag: "bionic"
-      - image: "docker-ubuntu-systemd"
-        tag: "focal"
-
-role_testing:
-  script:
-    - image=${image} tag=${tag} ansible-galaxy install buluma.mount
-  rules:
-    - if: $CI_COMMIT_REF_NAME == "testing"
-  retry: 1
-  parallel:
-    matrix:
-      - image: "alpine-openrc"
-        tag: "latest"
-      - image: "debian-systemd"
-        tag: "latest"
-      - image: "debian-systemd"
-        tag: "bookworm"
-      - image: "enterpriselinux"
-        tag: "latest"
-      - image: "fedora-systemd"
-        tag: "34"
-      - image: "fedora-systemd"
-        tag: "latest"
-      - image: "fedora-systemd"
-        tag: "rawhide"
-      - image: "opensuse"
+      - image: "docker-opensuse-systemd"
         tag: "latest"
       - image: "docker-ubuntu-systemd"
         tag: "latest"
@@ -105,7 +68,7 @@ galaxy:
   script:
     - ansible-galaxy role info buluma.mount
 
-role_testing_live:
+role_testing:
   script:
     - image=${image} tag=${tag} ansible-galaxy install buluma.mount
   retry: 1
@@ -123,9 +86,7 @@ role_testing_live:
         tag: "34"
       - image: "fedora-systemd"
         tag: "latest"
-      - image: "fedora-systemd"
-        tag: "rawhide"
-      - image: "opensuse"
+      - image: "docker-opensuse-systemd"
         tag: "latest"
       - image: "docker-ubuntu-systemd"
         tag: "latest"
