All task names should start with uppercase.

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -5,32 +5,32 @@
   gather_facts: no
 
   tasks:
-    - name: check directory
+    - name: Check directory
       ansible.builtin.stat:
         path: /mnt/tmp
       register: mount_check_directory
       failed_when:
         - not mount_check_directory.stat.exists
 
-    - name: place some file
+    - name: Place some file
       ansible.builtin.file:
         path: /mnt/tmp/some_file.txt
         state: touch
         mode: "0644"
 
-    - name: unmount
+    - name: Unmount
       ansible.posix.mount:
         path: /mnt/tmp
         state: unmounted
 
-    - name: check if some file is gone
+    - name: Check if some file is gone
       ansible.builtin.stat:
         path: /mnt/tmp/some_file.txt
       register: mount_check_some_file
       failed_when:
         - mount_check_some_file.stat.exists
 
-    - name: revert to mounted state before verify
+    - name: Revert to mounted state before verify
       ansible.posix.mount:
         path: /mnt/tmp
         src: /tmp
