--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -1,34 +1,34 @@
 ---
 
-- name: test if mount_default_mode is set correctly
+- name: Test if mount_default_mode is set correctly
   ansible.builtin.assert:
     that:
       - mount_default_mode is defined
       - mount_default_mode is string
     quiet: yes
 
-- name: test if mount_default_owner is set correctly
+- name: Test if mount_default_owner is set correctly
   ansible.builtin.assert:
     that:
       - mount_default_owner is defined
       - mount_default_owner is string
     quiet: yes
 
-- name: test if mount_default_group is set correctly
+- name: Test if mount_default_group is set correctly
   ansible.builtin.assert:
     that:
       - mount_default_group is defined
       - mount_default_group is string
     quiet: yes
 
-- name: test if mount_requests is set correctly
+- name: Test if mount_requests is set correctly
   ansible.builtin.assert:
     that:
       - mount_requests is defined
       - mount_requests is iterable
     quiet: yes
 
-- name: test if item.backup in mount_requests is set correctly
+- name: Test if item.backup in mount_requests is set correctly
   ansible.builtin.assert:
     that:
       - item.backup is boolean
@@ -39,7 +39,7 @@
   when:
     - item.backup is defined
 
-- name: test if item.boot in mount_requests is set correctly
+- name: Test if item.boot in mount_requests is set correctly
   ansible.builtin.assert:
     that:
       - item.boot is boolean
@@ -50,7 +50,7 @@
   when:
     - item.boot is defined
 
-- name: test if item.fstype in mount_requests is set correctly
+- name: Test if item.fstype in mount_requests is set correctly
   ansible.builtin.assert:
     that:
       - item.fstype is string
@@ -62,7 +62,7 @@
   when:
     - item.fstype is defined
 
-- name: test if item.path in mount_requests is set correctly
+- name: Test if item.path in mount_requests is set correctly
   ansible.builtin.assert:
     that:
       - item.path is defined
@@ -72,7 +72,7 @@
   loop_control:
     label: "{{ item.path }}"
 
-- name: test if item.state in mount_requests is set correctly
+- name: Test if item.state in mount_requests is set correctly
   ansible.builtin.assert:
     that:
       - item.state is string
