--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -5,4 +5,4 @@
 repository:
   description: Configure mounts
   homepage: https://buluma.github.io/
-  topics: mount, ansible, molecule, tox, playbook, hacktoberfest
+  topics: mount, ansible, molecule, tox, playbook
