--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -27,6 +27,8 @@
       - mount_requests is defined
       - mount_requests is iterable
     quiet: yes
+  when:
+    - mount_requests is defined
 
 - name: assert | Test if item.backup in mount_requests is set correctly
   ansible.builtin.assert:
@@ -50,17 +52,23 @@
   when:
     - item.boot is defined
 
-- name: assert | Test if item.fstype in mount_requests is set correctly
-  ansible.builtin.assert:
-    that:
-      - item.fstype is string
-      - item.fstype in [ "cifs", "ext3", "ext4", "iso9660", "nfs", "none", "swap", "xfs" ]
-    quiet: yes
-  loop: "{{ mount_requests }}"
-  loop_control:
-    label: "{{ item.path }}"
-  when:
-    - item.fstype is defined
+- name: assert | Warn if item.fstype in mount_requests is set incorrectly
+  block:
+    - name: assert | Test if item.fstype in mount_requests is set correctly
+      ansible.builtin.assert:
+        that:
+          - item.fstype is string
+          - item.fstype in [ "ext3", "ext4", "iso9660", "nfs", "none", "swap", "xfs" ]
+        quiet: yes
+      loop: "{{ mount_requests }}"
+      loop_control:
+        label: "{{ item.path }}"
+      when:
+        - item.fstype is defined
+  rescue:
+    - name: assert | Warn about unknown filesystem
+      ansible.builtin.debug:
+        msg: "The filesystem you have specified in unknown, proceeding."
 
 - name: assert | Test if item.path in mount_requests is set correctly
   ansible.builtin.assert:
