--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -58,7 +58,7 @@
       ansible.builtin.assert:
         that:
           - item.fstype is string
-          - item.fstype in [ "ext3", "ext4", "iso9660", "nfs", "none", "swap", "xfs" ]
+          - item.fstype in [ "cifs","ext3", "ext4", "iso9660", "nfs", "none", "swap", "xfs" ]
         quiet: yes
       loop: "{{ mount_requests }}"
       loop_control:
