--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -5,28 +5,28 @@
     that:
       - mount_default_mode is defined
       - mount_default_mode is string
-    quiet: yes
+    quiet: true
 
 - name: assert | Test if mount_default_owner is set correctly
   ansible.builtin.assert:
     that:
       - mount_default_owner is defined
       - mount_default_owner is string
-    quiet: yes
+    quiet: true
 
 - name: assert | Test if mount_default_group is set correctly
   ansible.builtin.assert:
     that:
       - mount_default_group is defined
       - mount_default_group is string
-    quiet: yes
+    quiet: true
 
 - name: assert | Test if mount_requests is set correctly
   ansible.builtin.assert:
     that:
       - mount_requests is defined
       - mount_requests is iterable
-    quiet: yes
+    quiet: true
   when:
     - mount_requests is defined
 
@@ -34,7 +34,7 @@
   ansible.builtin.assert:
     that:
       - item.backup is boolean
-    quiet: yes
+    quiet: true
   loop: "{{ mount_requests }}"
   loop_control:
     label: "{{ item.path }}"
@@ -45,7 +45,7 @@
   ansible.builtin.assert:
     that:
       - item.boot is boolean
-    quiet: yes
+    quiet: true
   loop: "{{ mount_requests }}"
   loop_control:
     label: "{{ item.path }}"
@@ -59,7 +59,7 @@
         that:
           - item.fstype is string
           - item.fstype in [ "cifs", "ext3", "ext4", "iso9660", "nfs", "none", "swap", "xfs" ]
-        quiet: yes
+        quiet: true
       loop: "{{ mount_requests }}"
       loop_control:
         label: "{{ item.path }}"
@@ -75,7 +75,7 @@
     that:
       - item.path is defined
       - item.path is string
-    quiet: yes
+    quiet: true
   loop: "{{ mount_requests }}"
   loop_control:
     label: "{{ item.path }}"
@@ -85,7 +85,7 @@
     that:
       - item.state is string
       - item.state in [ "absent", "mounted", "present", "remounted", "unmounted" ]
-    quiet: yes
+    quiet: true
   when:
     - item.state is defined
   loop: "{{ mount_requests }}"
