--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -46,8 +46,8 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - image: "alpine-openrc"
-            tag: "latest"
+          - image: "docker-molecule-images"
+            tag: "alpine-openrc"
           - image: "docker-molecule-images"
             tag: "buster"
           - image: "docker-molecule-images"
@@ -67,6 +67,8 @@ jobs:
           - image: "docker-molecule-images"
             tag: "opensuse"
           - image: "docker-molecule-images"
+            tag: "ubuntu_latest"
+          - image: "docker-molecule-images"
             tag: "focal"
           - image: "docker-molecule-images"
             tag: "bionic"
@@ -74,6 +76,8 @@ jobs:
             tag: "jammy"
           - image: "docker-molecule-images"
             tag: "lunar"
+          - image: "docker-molecule-images"
+            tag: "noble"
           - image: "docker-molecule-images"
             tag: "kalilinux"
     steps:
