--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,3 @@
----
 galaxy_info:
   author: Michael Buluma
   namespace: buluma
@@ -6,31 +5,29 @@ galaxy_info:
   description: Configure mounts
   license: Apache-2.0
   company: ShadowNet
-  min_ansible_version: "2.12"
-
+  min_ansible_version: '2.12'
   platforms:
-    - name: Alpine
-      versions:
-        - all
-    - name: Debian
-      versions:
-        - all
-    - name: EL
-      versions:
-        - "8"
-    - name: Fedora
-      versions:
-        - all
-    - name: opensuse
-      versions:
-        - all
-    - name: Ubuntu
-      versions:
-        - all
-    - name: Kali
-      versions:
-        - all
+  - name: Alpine
+    versions:
+    - all
+  - name: Debian
+    versions:
+    - all
+  - name: EL
+    versions:
+    - all
+  - name: Fedora
+    versions:
+    - all
+  - name: opensuse
+    versions:
+    - all
+  - name: Ubuntu
+    versions:
+    - all
+  - name: Kali
+    versions:
+    - all
   galaxy_tags:
-    - mount
-
+  - mount
 dependencies: []
